--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,8 @@ project:
 
 website:
   page-navigation: true
-  title: "F4SG: time series & forecasting in R"
-  description: "Homepage for forecasting for social good time series workshop"
+  title: "F4SG: Africast"
+  description: "Homepage for forecasting for social good time series AFRICAST workshop"
   site-url: "https://workshop.mitchelloharawild.com/f4sg-africa"
   
   repo-url: https://github.com/mitchelloharawild/workshop-f4sg-africa
@@ -27,7 +27,7 @@ website:
 
   page-footer:
     left: "This page is built with ❤️ and [Quarto](https://quarto.org/)."
-    right: "&copy; Copyright 2023, Mitchell O'Hara-Wild"
+    right: "&copy; Copyright 2023, [F4SG](https://www.f4sg.org/)"
     background: "#426D98"
 
   navbar:
