Add use_course() zip and set-up instructions for exercises

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   resources:
     - "images/twitter-card.png"
     - "materials/*.pdf"
+    - "exercises.zip"
   render:
     - "*.qmd"
     - "!exercises"
