Add day 1 demo code

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,8 @@ project:
     - "*.qmd"
     - "!exercises"
     - "!materials"
+    - "!solutions"
+    - "!demo"
     - "!README.Rmd"
   pre-render: zip.R
 
