Include demo scripts to website

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
     - "images/twitter-card.png"
     - "materials/*.pdf"
     - "exercises.zip"
+    - "demo"
   render:
     - "*.qmd"
     - "!exercises"
